app/assets/css/main.css
/* ... */
@-moz-keyframes scalling {
  0% {
    -moz-transform: scale(0.3);
         transform: scale(0.3);
  }
  100% {
    -moz-transform: scale(1);
         transform: scale(1);
  }
}
@-o-keyframes scalling {
  0% {
    -o-transform: scale(0.3);
       transform: scale(0.3);
  }
  100% {
    -o-transform: scale(1);
       transform: scale(1);
  }
}
@keyframes scalling {
  0% {
    -webkit-transform: scale(0.3);
       -moz-transform: scale(0.3);
         -o-transform: scale(0.3);
            transform: scale(0.3);
  }
  100% {
    -webkit-transform: scale(1);
       -moz-transform: scale(1);
         -o-transform: scale(1);
            transform: scale(1);
  }
}
.calendar-cover {
  position: relative;
  width: 100%;
  -webkit-box-shadow: 2px 9px 31px -16px #257bbc;
     -moz-box-shadow: 2px 9px 31px -16px #257bbc;
          box-shadow: 2px 9px 31px -16px #257bbc;
  -webkit-border-top-left-radius: 15%;
     -moz-border-radius-topleft: 15%;
          border-top-left-radius: 15%;
  -webkit-border-top-right-radius: 15%;
     -moz-border-radius-topright: 15%;
          border-top-right-radius: 15%;
  -webkit-border-bottom-left-radius: 15%;
     -moz-border-radius-bottomleft: 15%;
          border-bottom-left-radius: 15%;
  -webkit-border-bottom-right-radius: 15%;
     -moz-border-radius-bottomright: 15%;
          border-bottom-right-radius: 15%;
  overflow: hidden;
}
.calendar-cover .calendar-body {
  position: relative;
  padding-top: 10%;
  padding-bottom: 18%;
  padding-left: 4%;
  padding-right: 4%;
}
.calendar-cover .calendar-body input {
  font-family: 'PlayfairDisplay-Regular';
  font-weight: normal;
  border: none;
  outline: none;
  text-align: center;
  width: 100%;
  font-size: 4.5em;
  background: none;
}
.calendar-cover .calendar-body input:focus {
  outline: none;
}
.calendar-cover .calendar-footer {
  background-color: #fafafa;
  float: left;
  width: 100%;
}
.calendar-cover .calendar-footer button {
  position: relative;
  border: none;
  background: none;
  outline: none;
  width: 50%;
  float: left;
  min-height: 56px;
}
.calendar-cover .calendar-footer button img {
  width: 35%;
}
@media only screen and (max-width:768px) {
  .calendar-cover .calendar-footer button img {
    width: 19%;
  }
}
.calendar-cover .calendar-footer button span {
  display: inline-block;
}
.calendar-cover .calendar-footer button:first-child:after {
  content: '';
  position: absolute;
  width: 1px;
  height: 90%;
  top: 0;
  bottom: 0;
  right: 0;
  margin-top: auto;
  margin-bottom: auto;
  background-color: #d7dde4;
}
.calendar-cover .calendar-footer button:active {
  top: 2px;
}
.calendar-cover .format {
  font-family: 'PlayfairDisplay-Regular';
  font-weight: normal;
  font-size: 1.875em;
  position: absolute;
  right: 10%;
  top: 12%;
  z-index: 1;
}
.calendar-cover.addBlue .calendar-body {
  background-color: #f0f4f7;
}
.calendar-cover.addBlue .calendar-body input {
  color: #047BC1;
}
.calendar-cover.addBlue .format {
  color: #047BC1;
}
.calendar-cover.addRed .calendar-body {
  background-color: #fde8de;
}
.calendar-cover.addRed .calendar-body input {
  color: #F26529;
}
.calendar-cover.addRed .format {
  color: #F26529;
}
.calendar-divider {
  position: relative;
  margin-top: 6%;
}
.calendar-divider span {
  width: 100%;
  height: 2px;
  display: inline-block;
  background-image: -webkit-gradient(linear, left top, right top, color-stop(25%, #247abc), color-stop(0%, rgba(255, 255, 255, 0)));
  background-image: -webkit-linear-gradient(left, #247abc 25%, rgba(255, 255, 255, 0) 0%);
  background-image: -moz-linear-gradient(left, #247abc 25%, rgba(255, 255, 255, 0) 0%);
  background-image: -o-linear-gradient(left, #247abc 25%, rgba(255, 255, 255, 0) 0%);
  background-image: linear-gradient(to right, #247abc 25%, rgba(255, 255, 255, 0) 0%);
  background-position: bottom;
  -webkit-background-size: 6px 2px;
     -moz-background-size: 6px 2px;
       -o-background-size: 6px 2px;
          background-size: 6px 2px;
  background-repeat: repeat-x;
  background-color: transparent;
}
.retirement .calender-outer-cover,
.education .calender-outer-cover {
  margin-top: 20px;
  padding-bottom: 3%;
}
.retirement .calender-outer-cover .calendarHeader,
.education .calender-outer-cover .calendarHeader {
  font-family: 'PlayfairDisplay-Regular';
  color: #101010;
  font-weight: normal;
  opacity: 0.7;
  font-size: 1.5em;
  margin-top: 0px;
  margin-bottom: 20px;
}
.retirement .calender-outer-cover .calendar-divider,
.education .calender-outer-cover .calendar-divider {
  margin-top: 30%;
}
.swiper-container {
  width: 100%;
  height: 450px;
}
@media only screen and (max-width:768px) {
  .swiper-container {
    min-height: 450px;
  }
}
@media only screen and (min-width:1400px) {
  .swiper-container {
    min-height: 550px;
  }
}
.swiper-container .bubble {
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
     -moz-box-orient: vertical;
     -moz-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-justify-content: space-around;
      -ms-flex-pack: distribute;
          justify-content: space-around;
  -webkit-box-align: center;
  -webkit-align-items: center;
     -moz-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: absolute;
  right: -7px;
  top: 160px;
  width: 20px;
  z-index: 10;
}
@media only screen and (max-width:768px) {
  .swiper-container .bubble {
    -webkit-box-orient: horizontal;
    -webkit-flex-direction: row;
       -moz-box-orient: horizontal;
       -moz-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    left: 40%;
    top: 0;
    width: 16%;
  }
}
/* ... */

